@startuml SimpleERD
title LEGO E-commerce ER Overview

hide circle
hide methods
skinparam linetype ortho
skinparam entity {
  BackgroundColor #fdfdfd
  BorderColor #333333
  FontSize 14
}
skinparam ArrowColor #444444
skinparam defaultFontName Arial

entity User {
  * _id
  --
  name
  email <<unique>>
  role
}

entity Lego {
  * _id
  --
  name
  price
  status
}

entity Order {
  * _id
  --
  orderNumber <<unique>>
  total
  status
}

entity OrderItem {
  --
  quantity
  price
}

entity Review {
  * _id
  --
  rating
  comment
}

entity Cart {
  * _id
  --
  updatedAt
}

entity Wishlist {
  * _id
}

entity Notification {
  * _id
  --
  title
  status
}

entity ActivityLog {
  * _id
  --
  action
  createdAt
}

entity Voucher {
  * _id
  --
  code <<unique>>
  discountPercent
}

entity Theme {
  * _id
  --
  name <<unique>>
}

entity AgeRange {
  * _id
  --
  rangeLabel <<unique>>
}

entity Difficulty {
  * _id
  --
  label <<unique>>
}

User ||--o{ Order : places
Order ||--o{ OrderItem : lines
OrderItem }o--|| Lego : includes
Order }o--|| Voucher : applies

User ||--o| Cart : owns
Cart ||--o{ Lego : items

User ||--o| Wishlist : keeps
Wishlist ||--o{ Lego : saves

User ||--o{ Review : writes
Lego ||--o{ Review : receives

User ||--o{ Notification : receives
User ||--o{ ActivityLog : triggers

User ||--o{ Lego : creates
Theme ||--o{ Lego : groups
AgeRange ||--o{ Lego : targets
Difficulty ||--o{ Lego : rates

@enduml
